<resources>
    <string name="app_name">VisitManagement</string>
    <string name="welcome">IT로 세상을 바꾸는</string>
    <string name="welcomeRTW">RTW</string>
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_pw">비밀번호를 입력하세요</string>
    <string name="hint_pwcheck">비밀번호를 다시 한 번 입력하세요</string>
    <string name="hint_name">이름을 입력하세요</string>
    <string name="hint_phone">전화번호를 입력하세요</string>
    <string name="hint_photo">사진을 업로드 하세요</string>
    <string name="hint_belong">소속을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_login_user">로그인</string>
    <string name="btn_register">가입하기</string>
    <string name="btn_logout">로그아웃</string>
    <string name="register_text">회원가입</string>
    <string name="login_text">로그인</string>
    <string name="reservation_text">방문신청</string>
    <string name="date">방문일시</string>
</resources>

