<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/login_text"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_name"

        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_phone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/signPW2"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:textSize="18dp"
            android:text="@string/hint_photo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pwcheckbutton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"
            android:text="업로드"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_belong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_belong"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:gravity="center"
            android:layout_weight="5"
            android:layout_marginBottom="16dp"
            android:background="#999999"
            />
    </LinearLayout>
</LinearLayout>