<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="회원가입"
        android:background="#000000"
        android:textSize="20sp"
        android:textColor="#ffffff"
        />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <EditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:hint="@string/hint_id"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="match_parent"
        android:hint="@string/hint_pw"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/hint_name"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--        <TextView-->
        <!--            android:id="@+id/tv_photo"-->
        <!--            android:layout_width="210dp"-->
        <!--            android:layout_height="40dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:layout_marginLeft="5dp"-->
        <!--            android:textSize="18dp"-->
        <!--            android:text="@string/hint_photo" />-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="80dp"
            android:text="업로드"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_phone"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        />

    <EditText
        android:id="@+id/et_belong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_belong"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="30dp"
        >

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:padding="0dp"
        android:textSize="20sp"
        android:text="@string/btn_register"
        />

</LinearLayout>